--- a/index.html
+++ b/index.html
@@ -80,56 +80,24 @@
             </div>
             <div class="left">
               <h2>¿Quienes somos?</h2>
-              <p>Easy Charge importa y distribuye de forma exclusiva, productos que brindan soluciones de carga diseñados para mejorar la
-              forma en que las personas cargan sus dispositivos móviles. Al mezclar el buen diseño con la practicidad, los problemas cotidianos
-              se resuelven de manera elegante y eficiente. Las soluciones de carga de Easy Charge potencian la tecnología que nos conecta
-              con las personas, las actividades y las experiencias que todos tanto amamos.</p>
+              <p>En Easy Charge importamos y distribuimos de forma exclusiva, productos de alta calidad que brindan soluciones de carga de batería de dispositivos móviles para establecimientos comerciales y sus clientes.
+              <br>
+              Nuestros productos están fabricados de tal forma que combinan el buen diseño con la practicidad, los problemas cotidianos de carga de batería de Dispositivos Móviles de forma eficiente y elegante.
+              <br>
+              Las soluciones de carga de Easy Charge potencia la tecnología que nos conectan con las personas, actividades y las experiencias que tanto amamos.
+              </p>
             </div>
           </div>
           <div class="flex_content_doble publicidad">
             <div class="right">
               <h2>¿Por que Easy Charge?</h2>
-              <p>Los beneficios que obtendrá las empresas con los equipos EasyCharge serán los de proveer a sus clientes de un servicio diferencial
-              de carga, satisfaciendo una necesidad que se ha convertido en básica en los últimos años. Ya sea mientras se encuentran en
-              un restaurante, gimnasio, centro de salud, spa, shopping, hotel u otro tipo de establecimientos.</p>
+              <p>Los beneficios que obtendrán nuestros clientes y asociados con los equipos de Easy Charge será los de proveer a sus clientes de un servicio diferencial de carga de batería, satisfaciendo una necesidad que se ha convertido en básica en los últimos años.
+                <br>
+              Nuestros productos pueden ser utilizados en restaurantes, gimnasios, centros de salud, spas, shoppings, hoteles y demás establecimientos.
+              </p>
             </div>
             <div class="left">
               <img src="img/icon/publicity.svg" alt="">
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="encuentranos">
-        <div class="slider separator_bottom separator_top ">
-          <div class="gradiant">
-            <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
-          </div>
-          <div class="flex_center">
-            <div class="flex_item">
-              <div class="text_center_slider ">
-                <div class="img">
-                  <img src="img/iphone_charging.png" class="img-responsive" alt="">
-                </div>
-                <div class="txt">                  
-                  <h1>
-                    Encuentra nuestros puntos de carga 
-                    <br>
-                    EasyCharge
-                  </h1>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="container">
-          <div class="col-md-12">
-            <div class="cont_map">
-              <div class="map">
-                <iframe src="https://www.google.com/maps/d/embed?mid=1iIXj6dESsq7RjBYCjYjkpkzbYv0&hl=es-419"></iframe>
-              </div>
             </div>
           </div>
         </div>
