--- a/lockers-1.html
+++ b/lockers-1.html
@@ -65,7 +65,7 @@
           <div class="text_center_slider ">
             <div class="txt">
               <h1>
-                <span>Locker de carga de 8 celdas Kiosco</span>
+                <span>EasyOread</span>
               </h1>
             </div>
           </div>
@@ -79,18 +79,17 @@
       <div class="col-md-12">
         <div class="detail-product">
           <div class="product-img">
-            <img src="img/products/lockers-1.png" alt="Locker de carga de 8 celdas Kiosco" class="img-responsive">
+            <img src="img/products/lockers-1.png" alt="EasyOread - Locker de carga de 8 celdas" class="img-responsive">
           </div>
           <div class="product-description">
-            <h2>Locker de carga de 8 celdas Kiosco</h2>
-            <p>Super Power Station</p>
+            <h2>EasyOread</h2>
+            <p>Locker de carga de 8 celdas</p>
             <div class="list-description">
               <h3>Perfecto para:</h3>
               <ul>
+                <li>Centros de deportes</li>
+                <li>Áreas de esperas</li>
                 <li>Clubes Privados</li>
-                <li>Lugares de trabajo</li>
-                <li>Clubes de Golf</li>
-                <li>Centros de deporte</li>
               </ul>
             </div>
             <div class="content-photos-products">
@@ -104,10 +103,10 @@
               </div>
               <div class="photos-products">
                 <div class="photo">
-                  <img src="img/products/lockers-1/ads.jpg" alt="" class="img-responsive">
+                  <img src="img/products/lockers-1/material.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="text">
-                  <p>Publicidad Customizable</p>
+                  <p>2 cables de carga por lockers</p>
                 </div>
               </div>
               <div class="photos-products">
@@ -116,6 +115,14 @@
                 </div>
                 <div class="text">
                   <p>Construido con materiales de alta calidad: Proteje tu dispositivo de robos.</p>
+                </div>
+              </div>
+              <div class="photos-products">
+                <div class="photo">
+                  <img src="img/products/lockers-1/ads.jpg" alt="" class="img-responsive">
+                </div>
+                <div class="text">
+                  <p>Publicidad Customizable</p>
                 </div>
               </div>
             </div>
@@ -131,20 +138,8 @@
                 <li>
                   <p>
                     <b>Salida de energia:</b>
-                    Micro USB Cable: 5V/ 1.0A
+                    USB Cable: 5V/ 1.0A
                     <br> Apple MFi Lightning Cable: 5V/1.0
-                  </p>
-                </li>
-                <li>
-                  <p>
-                    <b>Cantidad de Power Banks:</b>
-                    6 PCS
-                  </p>
-                </li>
-                <li>
-                  <p>
-                    <b>Capacidad de Batería:</b>
-                    5000mAh
                   </p>
                 </li>
               </ul>
@@ -153,13 +148,13 @@
               <h3>Cables de Carga</h3>
               <ul>
                 <li>
-                  <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable
+                  <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable x6
                 </li>
                 <li>
-                  <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable
+                  <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable x6
                 </li>
                 <li>
-                  <img src="img/icon/usb-c.jpg" alt=""> USB Type C Cable
+                  <img src="img/icon/usb-c.jpg" alt=""> USB Type C Cable x4
                 </li>
               </ul>
             </div>
@@ -168,41 +163,6 @@
       </div>
     </div>
   </section>
-
-  <section id="encuentranos">
-    <div class="slider separator_bottom separator_top ">
-      <div class="gradiant">
-        <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
-      </div>
-      <div class="flex_center">
-        <div class="flex_item">
-          <div class="text_center_slider ">
-            <div class="img">
-              <img src="img/iphone_charging.png" class="img-responsive" alt="">
-            </div>
-            <div class="txt">
-              <h1>
-                Encuentra nuestros puntos de carga
-                <br> EasyCharge
-              </h1>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section>
-    <div class="container">
-      <div class="col-md-12">
-        <div class="cont_map">
-          <div class="map">
-            <iframe src="https://www.google.com/maps/d/embed?mid=1iIXj6dESsq7RjBYCjYjkpkzbYv0&hl=es-419"></iframe>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
       <footer id="contacto" class="separator_top">
         <div class="flex_center gradiant">
           <div class="flex_item">
