--- a/mesa-1.html
+++ b/mesa-1.html
@@ -50,7 +50,7 @@
               <div class="text_center_slider ">
                 <div class="txt">                  
                   <h1>
-                    <span>6 Power Banks</span>
+                    <span>EasyTank</span>
                   </h1>
                 </div>
               </div>
@@ -64,24 +64,50 @@
             <div class="col-md-12">
                 <div class="detail-product">
                     <div class="product-img">
-                        <img src="img/products/mesa-1.png" alt="6 Power Banks" class="img-responsive">
+                        <img src="img/products/mesa-1.png" alt="EasyTank Estación de Carga con 6 Power Banks" class="img-responsive">
                     </div>
                     <div class="product-description">
-                        <h2>6 Power Banks</h2>
-                        <p>Estación de Carga de Power Banks</p>
+                        <h2>EasyTank</h2>
+                        <p>Estación de Carga con 6 Power Banks</p>
                         <div class="list-description">
                           <h3>Perfecto para:</h3>
                           <ul>
-                            <li>Casinos</li>
-                            <li>Cafes</li>
                             <li>Restaurants</li>
+                            <li>Cafes</li>
                             <li>Bares</li>
                             <li>Resorts</li>
                             <li>Clubes nocturnos</li>
-                            <li>Clubes de Golf</li>
+                            <li>Casinos</li>
                           </ul>
                         </div>
                         <div class="content-photos-products">
+                          <div class="photos-products">
+                            <div class="photo">
+                              <img src="img/products/features/dinner.jpg" alt="" class="img-responsive">
+                            </div>
+                            <div class="text">
+                              <p>
+                                <b>6 espacios de carga para Power Banks</b>Carga hasta 6 Power Banks al mismo tiempo</p>
+                            </div>
+                          </div>
+                          <div class="photos-products">
+                            <div class="photo">
+                              <img src="img/products/features/dinner.jpg" alt="" class="img-responsive">
+                            </div>
+                            <div class="text">
+                              <p>
+                                <b>Hasta 6 power banks incluido por estación</b>Para que tús clientes se mantenga con cargas en la bateria de sus celulares</p>
+                            </div>
+                          </div>
+                          <div class="photos-products">
+                            <div class="photo">
+                              <img src="img/products/mesa-1/cables.jpg" alt="" class="img-responsive">
+                            </div>
+                            <div class="text">
+                              <p>
+                                <b>Box para cambio de cables</b> Limpio y Ordenado</p>
+                            </div>
+                          </div>
                           <div class="photos-products">
                             <div class="photo">
                               <img src="img/products/mesa-1/design.jpg" alt="" class="img-responsive">
@@ -96,22 +122,6 @@
                             </div>
                             <div class="text">
                               <p><b>Mantenga a sus clientes con carga mientras se divierten</b></p>
-                            </div>
-                          </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/features/dinner.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p><b>Seis espacios de carga de Power Bank</b>Carga hasta 6 Power Banks al mismo tiempo</p>
-                            </div>
-                          </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/mesa-1/cables.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p><b>Box para cambio de cables</b> Limpio y Ordenado</p>
                             </div>
                           </div>
                         </div>
@@ -148,54 +158,19 @@
                           <h3>Cables de Carga</h3>
                           <ul>
                             <li>
-                              <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable
+                              <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable x2
+                            </li>
+                            <li>  
+                              <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable x2
                             </li>
                             <li>
-                              <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable
-                            </li>
-                            <li>
-                              <img src="img/icon/usb-c.jpg" alt=""> USB Type C Cable
+                              <img src="img/icon/usb-c.jpg" alt=""> USB Type C Cable x2
                             </li>
                           </ul>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-      </section>
-
-      <section id="encuentranos">
-        <div class="slider separator_bottom separator_top ">
-          <div class="gradiant">
-            <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
-          </div>
-          <div class="flex_center">
-            <div class="flex_item">
-              <div class="text_center_slider ">
-                <div class="img">
-                  <img src="img/iphone_charging.png" class="img-responsive" alt="">
-                </div>
-                <div class="txt">                  
-                  <h1>
-                    Encuentra nuestros puntos de carga 
-                    <br>
-                    EasyCharge
-                  </h1>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="container">
-          <div class="col-md-12">
-            <div class="cont_map">
-              <div class="map">
-                <iframe src="https://www.google.com/maps/d/embed?mid=1iIXj6dESsq7RjBYCjYjkpkzbYv0&hl=es-419"></iframe>
-              </div>
-            </div>
-          </div>
         </div>
       </section>
 
