--- a/mesa-3.html
+++ b/mesa-3.html
@@ -65,7 +65,7 @@
           <div class="text_center_slider ">
             <div class="txt">
               <h1>
-                <span>Easy Charge</span>
+                <span>EasyShow</span>
               </h1>
             </div>
           </div>
@@ -79,11 +79,11 @@
       <div class="col-md-12">
         <div class="detail-product">
           <div class="product-img">
-            <img src="img/products/mesa-3.png" alt="Easy Charge" class="img-responsive">
+            <img src="img/products/mesa-3.png" alt="EasyShow" class="img-responsive">
           </div>
           <div class="product-description">
-            <h2>Easy Charge</h2>
-            <p>Super Power Station</p>
+            <h2>EasyShow</h2>
+            <p>Power Bank con pantalla LED.</p>
             <div class="list-description">
               <h3>Perfecto para:</h3>
               <ul>
@@ -91,15 +91,16 @@
                 <li>Cafes</li>
                 <li>Bares</li>
                 <li>Eventos</li>
+                <li>Fiestas</li>
               </ul>
             </div>
             <div class="content-photos-products">
               <div class="photos-products">
                 <div class="photo">
-                  <img src="img/products/mesa-3/player.jpg" alt="" class="img-responsive">
+                  <img src="img/products/mesa-3/charger.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="text">
-                  <p>Reproductor de imágenes (JPG, GIF, BMP y PNG) y video (MP4, WMV, MOV y AVI)</p>
+                  <p>Permite recargar hasta 8 smartphones y dispositivos móviles a la vez.</p>
                 </div>
               </div>
               <div class="photos-products">
@@ -108,6 +109,14 @@
                 </div>
                 <div class="text">
                   <p>Cable trenzado</p>
+                </div>
+              </div>
+              <div class="photos-products">
+                <div class="photo">
+                  <img src="img/products/mesa-3/player.jpg" alt="" class="img-responsive">
+                </div>
+                <div class="text">
+                  <p>Reproductor de imágenes (JPG, GIF, BMP y PNG) y video (MP4, WMV, MOV y AVI)</p>
                 </div>
               </div>
               <div class="photos-products">
@@ -126,14 +135,6 @@
                   <p>Mantenga a sus clientes con carga mientras se divierten</p>
                 </div>
               </div>
-              <div class="photos-products">
-                <div class="photo">
-                  <img src="img/products/mesa-3/charger.jpg" alt="" class="img-responsive">
-                </div>
-                <div class="text">
-                  <p>Permite recargar hasta 8 smartphones y dispositivos móviles a la vez.</p>
-                </div>
-              </div>
             </div>
             <div class="list-description">
               <h3>Especificaciones</h3>
@@ -147,7 +148,7 @@
                 <li>
                   <p>
                     <b>Cantidad de cargas simultaneas:</b>
-                    12 Dispositivos
+                    8 Dispositivos
                   </p>
                 </li>
                 <li>
@@ -168,10 +169,13 @@
               <h3>Cables de Carga</h3>
               <ul>
                 <li>
-                  <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable x 2
+                  <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable
                 </li>
                 <li>
-                  <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable x 1
+                  <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable
+                </li>
+                <li>
+                  <img src="img/icon/apple-l.jpg" alt=""> USB Ports x2
                 </li>
               </ul>
             </div>
@@ -180,41 +184,6 @@
       </div>
     </div>
   </section>
-
-  <section id="encuentranos">
-    <div class="slider separator_bottom separator_top ">
-      <div class="gradiant">
-        <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
-      </div>
-      <div class="flex_center">
-        <div class="flex_item">
-          <div class="text_center_slider ">
-            <div class="img">
-              <img src="img/iphone_charging.png" class="img-responsive" alt="">
-            </div>
-            <div class="txt">
-              <h1>
-                Encuentra nuestros puntos de carga
-                <br> EasyCharge
-              </h1>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section>
-    <div class="container">
-      <div class="col-md-12">
-        <div class="cont_map">
-          <div class="map">
-            <iframe src="https://www.google.com/maps/d/embed?mid=1iIXj6dESsq7RjBYCjYjkpkzbYv0&hl=es-419"></iframe>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
       <footer id="contacto" class="separator_top">
         <div class="flex_center gradiant">
           <div class="flex_item">
