--- a/pared-1.html
+++ b/pared-1.html
@@ -50,7 +50,7 @@
               <div class="text_center_slider ">
                 <div class="txt">                  
                   <h1>
-                    <span>Power Bank de pared 8 dispositivos</span>
+                    <span>EasyMount</span>
                   </h1>
                 </div>
               </div>
@@ -67,24 +67,24 @@
                         <img src="img/products/pared-1.png" alt="Power Bank de pared 8 dispositivos" class="img-responsive">
                     </div>
                     <div class="product-description">
-                      <h2>Easy Charge</h2>
-                      <p>Super Power Station</p>
+                      <h2>EasyMount</h2>
+                      <p>Estación de carga de pared para 8 dispositivos</p>
                       <div class="list-description">
                         <h3>Perfecto para:</h3>
                         <ul>
                           <li>Lobbies de Hoteles</li>
+                          <li>Centros deportivos</li>
+                          <li>Centros de Salud</li>
                           <li>Areas de espera</li>
-                          <li>Exhibiciones</li>
-                          <li>Eventos</li>
                         </ul>
                       </div>
                       <div class="content-photos-products">
                         <div class="photos-products">
                           <div class="photo">
-                            <img src="img/products/pared-1/ads.jpg" alt="" class="img-responsive">
+                            <img src="img/products/pared-1/cables.jpg" alt="" class="img-responsive">
                           </div>
                           <div class="text">
-                            <p>Publicidad Customizable</p>
+                            <p>Permite cargar hasta 8 dispositivos simultáneos.</p>
                           </div>
                         </div>
                         <div class="photos-products">
@@ -92,7 +92,15 @@
                             <img src="img/products/pared-1/cables.jpg" alt="" class="img-responsive">
                           </div>
                           <div class="text">
-                            <p>Permite cargar 8 dispositivos simultáneos.</p>
+                            <p>Facíl instalación.</p>
+                          </div>
+                        </div>
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/pared-1/ads.jpg" alt="" class="img-responsive">
+                          </div>
+                          <div class="text">
+                            <p>Publicidad Customizable</p>
                           </div>
                         </div>
                       </div>
@@ -117,57 +125,25 @@
                         <h3>Cables de Carga</h3>
                         <ul>
                           <li>
-                            <img src="img/icon/usb-1.jpg" alt="">Micro USB Cable
+                            <img src="img/icon/usb-1.jpg" alt="">Micro USB Cable x2
                           </li>
                           <li>
-                            <img src="img/icon/apple-l.jpg" alt="">Apple MFi Lightning Cable
+                            <img src="img/icon/apple-l.jpg" alt="">Apple MFi Lightning Cable x2
                           </li>
                           <li>
-                            <img src="img/icon/apple-large.jpg" alt="">Apple Cable Cable
+                            <img src="img/icon/apple-large.jpg" alt="">Apple Cable x1 
                           </li>
                           <li>
-                            <img src="img/icon/usb-c.jpg" alt="">USB Type C Cable
+                            <img src="img/icon/usb-c.jpg" alt="">USB Type C Cable x2
+                          </li>
+                          <li>
+                            <img src="img/icon/usb-c.jpg" alt="">USB Input x1
                           </li>
                         </ul>
                       </div>
                     </div>
                 </div>
             </div>
-        </div>
-      </section>
-
-      <section id="encuentranos">
-        <div class="slider separator_bottom separator_top ">
-          <div class="gradiant">
-            <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
-          </div>
-          <div class="flex_center">
-            <div class="flex_item">
-              <div class="text_center_slider ">
-                <div class="img">
-                  <img src="img/iphone_charging.png" class="img-responsive" alt="">
-                </div>
-                <div class="txt">                  
-                  <h1>
-                    Encuentra nuestros puntos de carga 
-                    <br>
-                    EasyCharge
-                  </h1>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="container">
-          <div class="col-md-12">
-            <div class="cont_map">
-              <div class="map">
-                <iframe src="https://www.google.com/maps/d/embed?mid=1iIXj6dESsq7RjBYCjYjkpkzbYv0&hl=es-419"></iframe>
-              </div>
-            </div>
-          </div>
         </div>
       </section>
 
