--- a/servicios.html
+++ b/servicios.html
@@ -88,8 +88,7 @@
                 <div class="tab active" id="one">
                   <div class="quote_text">
                     <h2>Alquiler</h2>
-                    Consiste en otorgar al establecimiento en modalidad de arrendamiento la cantidad de equipos portatiles con pantalla que se considere necesario, exhibiendo
-                    en los mismos lo que el negocio desee: menú, ofertas y públicidades.
+                    El servicio de alquiles consiste en otorgar a tu establecimiento en modalidad de arrendamiento la cantidad de equipos portátiles con pantalla que consideres necesario, exhibiendo en los mismos lo que tu negocio desee: menú, ofertas, publicidades, etc.
                   </div>
                   <div class="flex_container_description">
                     <div class="flex_item">
@@ -110,7 +109,7 @@
                           <div class="number logo_circulo">
                             2
                           </div>
-                          <p>Además de ofrecer la practicidad de un cargador portátil de celulares puedes usar Easy Charge para exhibir a tus
+                          <p>Además de ofrecer la practicidad de un cargador portátil de celulares puedes usar EasyShow para exhibir a tus
                             clientes menús, promociones, ofertas o hasta publicidades que aumenten tu facturación.</p>
                         </figcaption>
                       </figure>
@@ -139,6 +138,21 @@
                       </figure>
                     </div>
                   
+                  </div>
+                  <div class="flex_content_doble easycharge contact_easycharge gradiant">
+                    <div class="right">
+                      <div class="logo_circulo">
+                        <img src="img/logo-full.svg" alt="">
+                      </div>
+                    </div>
+                    <div class="left">
+                      <h2>¿Queres contar con nuestros servicios?</h2>
+                      <p>Si tenés un restaurante, café, bar, centro de estetica o establecimiento en donde tus clientes necesiten cargar sus
+                      dispositivos móviles y quieras exhibir tu contenido, contactanos y disfrutá de la experiencia única de EasyShow.</p>
+                      <div class="cont_btn">
+                        <a href="#contacto" class="btn">Contactanos</a>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <div class="tab" id="two">
@@ -198,9 +212,10 @@
                 <div class="tab" id="three">
                   <div class="quote_text">
                     <h2>Anunciate con nosotros</h2>
-                    Easy Charge es un dispositivo moderno y práctico donde publicitar. Tu marca, producto y/o servicio se exhibirá en la pantalla
-                    de los equipos Easy Charge en bares, restaurantes, centros de estética, gimnasios y otros establecimientos aliados de primer nivel
-                    en el Uruguay. Anunciar en Easy Charge es colocar tu marca en una experiencia memorable y llamativa para el público.
+                     Nuestros cargadores portátiles con pantallas son dispositivos modernos y prácticos donde publicitar. Tu marca, producto
+                    y/o servicio se exhibirá en la pantalla de los equipos en restaurantes, bares, cafés, y otros establecimientos aliados de
+                    primer nivel en el Uruguay. Anunciar en Easy Charge es colocar tu marca en una experiencia memorable y llamativa para el
+                    público.
                   </div>
                   <div class="flex_container_description">
                     <div class="flex_item">
@@ -209,8 +224,8 @@
                           <div class="number logo_circulo">
                             1
                           </div>
-                          <h4>Última tecnologia</h4>
-                          <p>EasyCharge es una plataforma Simple y Eficaz.</p>
+                          <h3>Última tecnología</h3>
+                          <p>EasyShow es una plataforma Simple y Eficaz.</p>
                         </figcaption>
                       </figure>
                     </div>
@@ -221,7 +236,7 @@
                           <div class="number logo_circulo">
                             2
                           </div>
-                          <h4>Única</h4>
+                          <h3>Única</h3>
                           <p>Es colocar su Marca en una experencia memorable y divertida.</p>
                         </figcaption>
                       </figure>
@@ -232,7 +247,7 @@
                           <div class="number logo_circulo">
                             3
                           </div>
-                          <h4>Anunciate</h4>
+                          <h3>Anunciate</h3>
                           <p>Anuncia en EasyCharge es fácil y rápido.</p>
                         </figcaption>
                       </figure>
@@ -242,6 +257,7 @@
                     <h2>¿Cómo funciona?</h2>
                      Anunciar en EasyCharge es sencillo y rápido, solo tenés que llenar el formulario y te responderemos a la brevedad.
                   </div>
+                  <h2 class="text-center">Marcas que confiarón en nosotros</h2>
                   <div class="flex_container_description establecimientos">
                     <div class="flex_item">
                       <figure class="tech_item" id="eight_gagdet">
@@ -253,9 +269,9 @@
                     </div>
                     <div class="flex_item">
                       <figure class="tech_item" id="eight_gagdet">
-                        <img src="img/icon/logo/dolce_house.jpg" alt="">
+                        <img src="img/icon/logo/nestle.jpg" alt="">
                         <figcaption>
-                          <h2>Nescafé Dolce Gusto</h2>
+                          <h2>Nestle</h2>
                         </figcaption>
                       </figure>
                     </div>
@@ -264,26 +280,6 @@
               </div>
             </div>
 
-          </div>
-        </div>
-      </section>
-
-
-      <section id="easycharge">
-        <div class="container">
-          <div class="flex_content_doble easycharge contact_easycharge gradiant">
-            <div class="right">
-              <div class="logo_circulo">
-                <img src="img/logo-full.svg" alt="">
-              </div>
-            </div>
-            <div class="left">
-              <h2>¿Queres formar parte de nuestra alianza?</h2>
-              <p>Si tenes un restaurante, bar, centro de estética, gimnasio o establecimiento en donde tus clientes necesiten cargar sus celulares y dispositivos móviles contactanos y disfrutá de la experiencia única de Easy Charge.</p>
-              <div class="cont_btn">
-                <a href="#contacto" class="btn">Contactanos</a>
-              </div>
-            </div>
           </div>
         </div>
       </section>
@@ -301,9 +297,7 @@
                 </div>
                 <div class="txt">                  
                   <h1>
-                    Encuentra nuestros puntos de carga 
-                    <br>
-                    EasyCharge
+                    Encuentra nuestros establecimientos alidos para publicitar
                   </h1>
                 </div>
               </div>
