--- a/kiosco-1.html
+++ b/kiosco-1.html
@@ -50,7 +50,7 @@
               <div class="text_center_slider ">
                 <div class="txt">                  
                   <h1>
-                    <span>Kiosco de carga de 12 salidas</span>
+                    <span>EasyNadia</span>
                   </h1>
                 </div>
               </div>
@@ -64,29 +64,21 @@
             <div class="col-md-12">
                 <div class="detail-product">
                     <div class="product-img">
-                        <img src="img/products/kiosko-1.png" alt="Kiosco de carga de 12 salidas" class="img-responsive">
+                        <img src="img/products/kiosko-1.png" alt="EasyNadia - Kiosco de carga de 12 salidas" class="img-responsive">
                     </div>
                     <div class="product-description">
-                      <h2>Kiosco de carga de 12 salidas</h2>
-                      <p>Super Power Station</p>
+                      <h2>EasyNadia</h2>
+                      <p>Kiosco de carga de 12 salidas</p>
                       <div class="list-description">
                         <h3>Perfecto para:</h3>
                         <ul>
+                          <li>Centro de Salud</li>
+                          <li>Centro de Convecciones</li>
                           <li>Hoteles</li>
-                          <li>Bares</li>
-                          <li>Cafes</li>
-                          <li>Restaurants</li>
+                          <li>Áreas de esperas</li>
                         </ul>
                       </div>
                       <div class="content-photos-products">
-                        <div class="photos-products">
-                          <div class="photo">
-                            <img src="img/products/kiosko-1/ads.jpg" alt="" class="img-responsive">
-                          </div>
-                          <div class="text">
-                            <p>Publicidad Customizable</p>
-                          </div>
-                        </div>
                         <div class="photos-products">
                           <div class="photo">
                             <img src="img/products/kiosko-1/cables.jpg" alt="" class="img-responsive">
@@ -97,19 +89,27 @@
                         </div>
                         <div class="photos-products">
                           <div class="photo">
-                            <img src="img/products/kiosko-1/lights.jpg" alt="" class="img-responsive">
-                          </div>
-                          <div class="text">
-                            <p>Publicidad luminosa</p>
-                          </div>
-                        </div>
-                        <div class="photos-products">
-                          <div class="photo">
                             <img src="img/products/kiosko-1/power-oultes.jpg" alt="" class="img-responsive">
                           </div>
                           <div class="text">
                             <p>
                               <b>Power Outlets</b> Carga y potencia para distintos tipos de dispositivos.</p>
+                          </div>
+                        </div>
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/kiosko-1/ads.jpg" alt="" class="img-responsive">
+                          </div>
+                          <div class="text">
+                            <p>Publicidad Customizable</p>
+                          </div>
+                        </div>
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/kiosko-1/lights.jpg" alt="" class="img-responsive">
+                          </div>
+                          <div class="text">
+                            <p>Publicidad luminosa</p>
                           </div>
                         </div>
                       </div>
@@ -134,66 +134,25 @@
                               10
                             </p>
                           </li>
-                          <li>
-                            <p>
-                              <b>Capacidad de Batería:</b>
-                              5000mAh
-                            </p>
-                          </li>
                         </ul>
                       </div>
                       <div class="list-connection">
                         <h3>Cables de Carga</h3>
                         <ul>
                           <li>
-                            <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable
+                            <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable x4
                           </li>
                           <li>
-                            <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable
+                            <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable x4
                           </li>
                           <li>
-                            <img src="img/icon/usb-c.jpg" alt=""> USB Type C Cable
+                            <img src="img/icon/usb-c.jpg" alt=""> USB Type C Cable x2
                           </li>
                         </ul>
                       </div>
                     </div>
                 </div>
             </div>
-        </div>
-      </section>
-
-      <section id="encuentranos">
-        <div class="slider separator_bottom separator_top ">
-          <div class="gradiant">
-            <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
-          </div>
-          <div class="flex_center">
-            <div class="flex_item">
-              <div class="text_center_slider ">
-                <div class="img">
-                  <img src="img/iphone_charging.png" class="img-responsive" alt="">
-                </div>
-                <div class="txt">                  
-                  <h1>
-                    Encuentra nuestros puntos de carga 
-                    <br>
-                    EasyCharge
-                  </h1>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="container">
-          <div class="col-md-12">
-            <div class="cont_map">
-              <div class="map">
-                <iframe src="https://www.google.com/maps/d/embed?mid=1iIXj6dESsq7RjBYCjYjkpkzbYv0&hl=es-419"></iframe>
-              </div>
-            </div>
-          </div>
         </div>
       </section>
 
