--- a/mesa-2.html
+++ b/mesa-2.html
@@ -50,7 +50,7 @@
               <div class="text_center_slider ">
                 <div class="txt">                  
                   <h1>
-                    <span>12 Power Banks</span>
+                    <span>EasyCube</span>
                   </h1>
                 </div>
               </div>
@@ -64,11 +64,11 @@
             <div class="col-md-12">
                 <div class="detail-product">
                     <div class="product-img">
-                        <img src="img/products/mesa-2.png" alt="12 Power Banks" class="img-responsive">
+                        <img src="img/products/mesa-2.png" alt="EasyCube con 12 Power Banks" class="img-responsive">
                     </div>
                     <div class="product-description">
-                      <h2>12 Power Banks</h2>
-                      <p>Super Power Station</p>
+                      <h2>EasyCube</h2>
+                      <p>Con 12 Power Bank, Super Power Station</p>
                       <div class="list-description">
                         <h3>Perfecto para:</h3>
                         <ul>
@@ -78,6 +78,25 @@
                         </ul>
                       </div>
                       <div class="content-photos-products">
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/mesa-2/chargers.jpg" alt="" class="img-responsive">
+                          </div>
+                          <div class="text">
+                            <p>
+                              <b>12 espacios de carga de Power Bank:</b> Carga hasta 12 Power Banks al mismo tiempo</p>
+                          </div>
+                        </div>
+
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/mesa-2/chargers.jpg" alt="" class="img-responsive">
+                          </div>
+                          <div class="text">
+                            <p>
+                              <b>Hasta 12 Power Banks por estación:</b> Para que tus clientes se mantengan con carga en la bateria de sus celulares</p>
+                          </div>
+                        </div>
                         <div class="photos-products">
                           <div class="photo">
                             <img src="img/products/mesa-2/charger.jpg" alt="" class="img-responsive">
@@ -110,14 +129,6 @@
                             <p>Mantenga a sus clientes con carga mientras se divierten</p>
                           </div>
                         </div>
-                        <div class="photos-products">
-                          <div class="photo">
-                            <img src="img/products/mesa-2/chargers.jpg" alt="" class="img-responsive">
-                          </div>
-                          <div class="text">
-                            <p>Doce espacios de carga de Power Bank: Carga hasta 12 Power Banks al mismo tiempo</p>
-                          </div>
-                        </div>
                       </div>
                       <div class="list-description">
                         <h3>Especificaciones</h3>
@@ -143,7 +154,7 @@
                           <li>
                             <p>
                               <b>Cantidad de Power Banks:</b>
-                              6 PCS
+                              12 PCS
                             </p>
                           </li>
                           <li>
@@ -171,41 +182,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-      </section>
-
-      <section id="encuentranos">
-        <div class="slider separator_bottom separator_top ">
-          <div class="gradiant">
-            <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
-          </div>
-          <div class="flex_center">
-            <div class="flex_item">
-              <div class="text_center_slider ">
-                <div class="img">
-                  <img src="img/iphone_charging.png" class="img-responsive" alt="">
-                </div>
-                <div class="txt">                  
-                  <h1>
-                    Encuentra nuestros puntos de carga 
-                    <br>
-                    EasyCharge
-                  </h1>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="container">
-          <div class="col-md-12">
-            <div class="cont_map">
-              <div class="map">
-                <iframe src="https://www.google.com/maps/d/embed?mid=1iIXj6dESsq7RjBYCjYjkpkzbYv0&hl=es-419"></iframe>
-              </div>
-            </div>
-          </div>
         </div>
       </section>
 
